# eskilator

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  RELEASE.md  TODOS.md  build_and_install.sh  build_release.sh  package.json
Glider/SampleMaps/: Default.xml
Source/: ParameterManager.cpp  ParameterManager.h  PluginEditor.cpp  PluginEditor.h  PluginLogger.cpp  PluginLogger.h  PluginProcessor.cpp  PluginProcessor.h  SampleManager.cpp  SampleManager.h  StyleSheet.cpp  StyleSheet.h
